Mon Jul 31 13:38:22 2006  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPReuqest#parse_uri): improve
	  for the value of IPv6 address in the Host: header field.

Sun Jul 30 23:26:22 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_call0): trace call/return of method defined from block.
	  fixed: [ruby-core:08329]

	* eval.c (rb_trap_eval): make the current thread runnable to deal with
	  exceptions which occurred within the trap.  fixed: [ruby-dev:27729]

	* lib/cgi/session.rb, lib/cgi/session/pstore.rb: suppress warnings.
	  fixed: [ruby-talk:204896]

Sat Jul 29 06:12:06 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: freeze ip_name for security reason.

Sat Jul 29 01:23:52 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/logger.rb: improves the amount of documentation that Rdoc
	  picks up when processing logger.rb by moving the require
	  statement back before the comment block.  a patch from Hugh
	  Sasse <hgs at dmu.ac.uk>.  [ruby-core:08422]

Thu Jul 27 22:21:52 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_to_s): fixed format mismatch.

Thu Jul 27 21:19:54 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* math.c (domain_check): a new function to check domain error
	  explicitly for systems that return NaN like FreeBSD.
	  [ruby-core:07019]

	* math.c (math_acos, math_asin, math_acosh, math_atanh, math_log,
	  math_log10, math_sqrt): use domain_check().

	* math.c (math_sqrt): fix documentation flaw.

Thu Jul 27 18:12:12 2006  WATANABE Hirofumi  <eban@ruby-lang.org>

	* time.c: need to declare time_utc_offset.

Thu Jul 27 17:01:01 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_close): always calls "close" method of the receiver.
	  [ruby-core:6911] [ruby-core:8112]

Thu Jul 27 16:49:01 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_to_s): use +0900 style timezone string for local time.
	  [ruby-dev:29143]
