@@ -10296,7 +10296,7 @@ rb_thread_switch(n)
 
 NORETURN(static void rb_thread_restore_context _((rb_thread_t,int)));
 
-# if _MSC_VER >= 1300
+# if defined(_MSC_VER) && _MSC_VER >= 1300
 __declspec(noinline) static void stack_extend(rb_thread_t, int);
 # endif
 static void
