@@ -3,6 +3,12 @@ Mon Jul 31 13:38:22 2006  GOTOU Yuuzou  <gotoyuzo@notwork.org>
 	* lib/webrick/httprequest.rb (WEBrick::HTTPReuqest#parse_uri): improve
 	  for the value of IPv6 address in the Host: header field.
 
+Mon Jul 31 09:22:12 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* ruby.h: use ifdef (or defined) for macro constants that may or
+	  may not be defined to shut up gcc's -Wundef warnings.
+	  [ruby-core:08447]
+
 Sun Jul 30 23:26:22 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (rb_call0): trace call/return of method defined from block.
